--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"papaparse": "^5.3.2"
+	}
 }
