--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "jrad-today",
 	"version": "0.0.1",
 	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages --message '$(date +\"%FT%T%z\")' --dist docs",
+		"build:deploy": "npm run build && npm run deploy",
+		"deploy": "gh-pages --message \"deploy @ $(date +'%FT%T%z')\" --dest docs --dist docs",
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
