--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "elm-pages-app",
+  "name": "jrad-today",
   "scripts": {
+    "deploy": "gh-pages --dist public",
     "postinstall": "elm-tooling install",
     "start": "elm-pages dev",
     "build": "elm-pages build"
@@ -9,6 +10,7 @@
     "elm-optimize-level-2": "0.2.3",
     "elm-pages": "2.1.10",
     "elm-review": "^2.5.5",
-    "elm-tooling": "^1.4.0"
+    "elm-tooling": "^1.4.0",
+    "gh-pages": "^4.0.0"
   }
 }
