--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "postpublish": "echo Done publishing — $(date)",
+    "prepublish": "export TAG=deploy-$(date '+%F-%H%M%S-%Z')",
     "preview": "qwik build preview && vite preview --open",
-    "publish": "export TAG=deploy-$(date '+%F-%H%M%S-%Z') && cp -r static/* dist/ && npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages --tag $TAG --message \"Deploy $TAG\"",
+    "publish": "npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages --tag $TAG --message \"Deploy $TAG\"",
     "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
@@ -38,5 +39,8 @@
     "typescript": "4.8.3",
     "vite": "3.1.1",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "dependencies": {
+    "papaparse": "^5.3.2"
   }
 }
