--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@builder.io/qwik-city": "0.0.111",
     "@types/eslint": "8.4.6",
     "@types/node": "latest",
+    "@types/papaparse": "^5.3.5",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
     "eslint": "8.23.1",
