--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.9.0",
-    "@builder.io/qwik-city": "0.0.111",
     "@types/eslint": "8.4.6",
     "@types/node": "latest",
     "@types/papaparse": "^5.3.5",
@@ -35,15 +33,17 @@
     "@typescript-eslint/parser": "5.37.0",
     "eslint": "8.23.1",
     "eslint-plugin-qwik": "0.9.0",
-    "gh-pages": "^4.0.0",
-    "node-fetch": "3.2.10",
     "prettier": "2.7.1",
-    "typescript": "4.8.3",
-    "vite": "3.1.1",
-    "vite-tsconfig-paths": "3.5.0"
+    "typescript": "4.8.3"
   },
   "dependencies": {
+    "@builder.io/qwik": "0.9.0",
+    "@builder.io/qwik-city": "0.0.111",
     "download-cli": "^1.1.1",
-    "papaparse": "^5.3.2"
+    "gh-pages": "^4.0.0",
+    "node-fetch": "3.2.10",
+    "papaparse": "^5.3.2",
+    "vite": "3.1.1",
+    "vite-tsconfig-paths": "3.5.0"
   }
 }
