ops: rename task

--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "build.static": "vite build --ssr src/entry.static.tsx",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
+    "deploy.prod": "date && npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages --tag deploy-$TIMESTAMP --message \"Deploy $TIMESTAMP\"",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "postpublish": "echo Done publishing — $(date)",
-    "prepublish": "export TAG=deploy-$(date '+%F-%H%M%S-%Z')",
+    "postdeploy.prod": "echo Done publishing — $(date)",
+    "predeploy.prod": "export TIMESTAMP=deploy-$(date '+%F-%H%M%S-%Z') && echo Publish starting at $TIMESTAMP",
     "preview": "qwik build preview && vite preview --open",
-    "publish": "npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages --tag $TAG --message \"Deploy $TAG\"",
     "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
