ops: try to jettison `gh-pages`

--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "build.static": "vite build --ssr src/entry.static.tsx",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
-    "deploy.prod": "date && npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages --tag deploy-$TIMESTAMP --message \"Deploy $TIMESTAMP\"",
+    "deploy.prod": "npm run build.static && npm run ssg && npm run deploy.prod.gh-pages",
+    "deploy.prod.gh-pages": "cp -r dist /tmp/dist-$TIMESTAMP && git co gh-pages && git pull && rm -rf ./* && cp -r /tmp/dist-$TIMESTAMP/* . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co -",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "postdeploy.prod": "echo Done publishing — $(date)",
-    "predeploy.prod": "export TIMESTAMP=deploy-$(date '+%F-%H%M%S-%Z') && echo Publish starting at $TIMESTAMP",
+    "postdeploy.prod": "echo Publish finishing @ $(npm run timestamp) — started at $TIMESTAMP",
+    "predeploy.prod": "export TIMESTAMP=$(npm run timestamp) && echo Publish starting @ $TIMESTAMP",
     "preview": "qwik build preview && vite preview --open",
     "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
+    "timestamp": "date '+%F-%H%M%S-%Z'",
     "qwik": "qwik"
   },
   "devDependencies": {
@@ -36,7 +38,6 @@
     "download-cli": "^1.1.1",
     "eslint": "8.23.1",
     "eslint-plugin-qwik": "0.9.0",
-    "gh-pages": "^4.0.0",
     "node-fetch": "3.2.10",
     "papaparse": "^5.3.2",
     "prettier": "2.7.1",
