bugfix: workin on deploy task...

--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
     "deploy.prod": "npm run build.static && npm run ssg && npm run deploy.prod.gh-pages",
-    "deploy.prod.gh-pages": "cp -r dist /tmp/dist-$TIMESTAMP && git co gh-pages && git pull && rm -rf ./* && cp -r /tmp/dist-$TIMESTAMP/* . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co -",
+    "deploy.prod.gh-pages": "cp -r dist/* /tmp/dist-$TIMESTAMP && git co gh-pages && git pull && rm -rf ./* && cp -r /tmp/dist-$TIMESTAMP/* . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co -",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "postdeploy.prod": "echo Publish finishing @ $(npm run timestamp) — started at $TIMESTAMP",
-    "predeploy.prod": "export TIMESTAMP=$(npm run timestamp) && echo Publish starting @ $TIMESTAMP",
+    "postdeploy.prod": "echo Publish finishing @ $(date '+%F-%H%M%S-%Z') — started at $TIMESTAMP",
+    "predeploy.prod": "export TIMESTAMP=$(date '+%F-%H%M%S-%Z') && echo Publish starting @ $TIMESTAMP",
     "preview": "qwik build preview && vite preview --open",
     "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
-    "timestamp": "date '+%F-%H%M%S-%Z'",
     "qwik": "qwik"
   },
   "devDependencies": {
