--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build.static": "vite build --ssr src/entry.static.tsx",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
-    "deploy.prod": "npm run build.static && npm run ssg && npm run deploy.prod.gh-pages",
-    "deploy.prod.gh-pages": "cp -r dist/* /tmp/dist-$TIMESTAMP && git co gh-pages && git pull && rm -rf ./* && cp -r /tmp/dist-$TIMESTAMP/* . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co -",
+    "deploy.prod": "export TMPDIR=/tmp/dist-$TIMESTAMP && npm run build.static && npm run ssg && mkdir $TMPDIR && cp -r dist/* $TMPDIR && git co gh-pages && git pull && rm -rf ./* && cp -r $TMPDIR . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co main",
+    "deploy.prod.gh-pages": "",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
