--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "build.static": "vite build --ssr src/entry.static.tsx",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
-    "deploy.prod": "export TMPDIR=/tmp/dist-$TIMESTAMP && npm run build.static && npm run ssg && mkdir $TMPDIR && cp -r dist/* $TMPDIR && git co gh-pages && git pull && rm -rf ./* && cp -r $TMPDIR . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co main",
+    "deploy.prod": "export TMPDIR=/tmp/dist-$TIMESTAMP && npm run build.static && npm run ssg && mkdir $TMPDIR && cp -r dist/* $TMPDIR/ && git co gh-pages && git pull && rm -rf ./* && cp -r $TMPDIR . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co main && echo not yet creating the tag deploy-$TIMESTAMP",
     "deploy.prod.gh-pages": "",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "postdeploy.prod": "echo Publish finishing @ $(date '+%F-%H%M%S-%Z') — started at $TIMESTAMP",
-    "predeploy.prod": "export TIMESTAMP=$(date '+%F-%H%M%S-%Z') && echo Publish starting @ $TIMESTAMP",
+    "postdeploy.prod": "echo Publish finishing @ $(date '+%F-%T-%Z') — started at $TIMESTAMP",
+    "predeploy.prod": "export TIMESTAMP=$(date '+%F-%T-%Z') && echo Publish starting @ $TIMESTAMP",
     "preview": "qwik build preview && vite preview --open",
     "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
