--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "build.static": "vite build --ssr src/entry.static.tsx",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
-    "deploy.prod": "export TMPDIR=/private/tmp/dist-$TIMESTAMP && npm run build.static && npm run ssg && cp -r dist $TMPDIR && git co gh-pages && git pull && rm -rf ./* && cp -r $TMPDIR/dist/* . && git add . && git ci -m Deploy\\ $TIMESTAMP && git push && git co main && echo not yet creating the tag deploy-$TIMESTAMP",
-    "deploy.prod.gh-pages": "",
+    "deploy.prod": "export TIMESTAMP=$(date '+%F-%T-%Z') && echo Publish starting @ $TIMESTAMP && export TMPDIR=/private/tmp/dist-$TIMESTAMP && npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages --tag deploy-$TIMESTAMP --message \"Deploy $TIMESTAMP\" && echo Publish finishing @ $(date '+%F-%T-%Z') — started at $TIMESTAMP",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "postdeploy.prod": "echo Publish finishing @ $(date '+%F-%T-%Z') — started at $TIMESTAMP",
-    "predeploy.prod": "export TIMESTAMP=$(date '+%F-%T-%Z') && echo Publish starting @ $TIMESTAMP",
     "preview": "qwik build preview && vite preview --open",
     "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
@@ -37,6 +34,7 @@
     "download-cli": "^1.1.1",
     "eslint": "8.23.1",
     "eslint-plugin-qwik": "0.9.0",
+    "gh-pages": "^4.0.0",
     "node-fetch": "3.2.10",
     "papaparse": "^5.3.2",
     "prettier": "2.7.1",
