--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "preview": "qwik build preview && vite preview --open",
     "qwik": "qwik",
     "ssg": "node server/entry.static",
-    "start": "vite --open --mode ssr"
+    "start": "vite --open --mode ssr",
+    "test": "node --loader=ts-node/esm bin/test.ts"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.9.0",
     "@builder.io/qwik-city": "0.0.111",
+    "@japa/expect": "^2.0.1",
+    "@japa/run-failed-tests": "^1.1.0",
+    "@japa/runner": "^2.2.1",
+    "@japa/spec-reporter": "^1.3.1",
     "@types/eslint": "8.4.6",
     "@types/node": "latest",
     "@types/papaparse": "^5.3.5",
@@ -40,8 +45,10 @@
     "node-fetch": "3.2.10",
     "papaparse": "^5.3.2",
     "prettier": "2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.3",
     "vite": "3.1.3",
     "vite-tsconfig-paths": "3.5.0"
-  }
+  },
+  "type": "module"
 }
