ops: revise `deploy` task
... the `$TIMESTAMP` stopped working?
... or doesn't work on this laptop...

--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "build.static": "vite build --ssr src/entry.static.tsx",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
-    "deploy.prod": "npm run build.client && npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages --tag deploy-$TIMESTAMP --message \"Deploy $TIMESTAMP\"",
+    "deploy.prod": "npm run build.client && npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "postdeploy.prod": "echo Publish finishing @ $(date '+%F-%T-%Z') — started at $TIMESTAMP",
-    "predeploy.prod": "export TIMESTAMP=$(date '+%F-%T-%Z') && echo Publish starting @ $TIMESTAMP",
     "preview": "qwik build preview && vite preview --open",
     "qwik": "qwik",
     "ssg": "node server/entry.static",
