--- a/q-manifest.json
+++ b/q-manifest.json
@@ -232,36 +232,92 @@
     }
   },
   "mapping": {
-    "s_6Fd8AjL5Bco": "q-317b7d8d.js",
-    "s_hA9UPaY8sNQ": "q-026e7fd1.js",
-    "s_tY5igJzCM5Q": "q-317b7d8d.js",
-    "s_udDrW7Y0ztw": "q-5adcacc9.js",
-    "s_skxgNVWVOT8": "q-026e7fd1.js",
-    "s_asLbBTFH6kA": "q-317b7d8d.js",
-    "s_g5vxWnYSDFs": "q-317b7d8d.js",
-    "s_uVE5iM9H73c": "q-026e7fd1.js",
-    "s_AaAlzKH0KlQ": "q-8a335b6a.js",
-    "s_tEQuFot8caw": "q-317b7d8d.js",
-    "s_WjXpUuAf3ck": "q-317b7d8d.js",
-    "s_0Ky05GxNoW8": "q-43141245.js",
-    "s_LJXogu0s4bw": "q-bc4e4663.js",
-    "s_WehTHV2Vp3k": "q-317b7d8d.js",
-    "s_gSIRXOSvTtA": "q-68af1561.js",
-    "s_mYsiJcA4IBc": "q-026e7fd1.js",
-    "s_nd8yk3KO22c": "q-86af8364.js",
-    "s_vsKr0ZqSHfU": "q-e983fc4a.js",
-    "s_z1nvHyEppoI": "q-8a335b6a.js",
-    "s_zr0sXMkduGs": "q-5adcacc9.js",
-    "s_08Vu5jppeJk": "q-317b7d8d.js",
-    "s_6F5YqPRJUdg": "q-68af1561.js",
-    "s_YJ6mtqrUqEk": "q-5adcacc9.js"
+    "s_6Fd8AjL5Bco": "q-4febc7f6.js",
+    "s_hA9UPaY8sNQ": "q-39709981.js",
+    "s_tY5igJzCM5Q": "q-4febc7f6.js",
+    "s_udDrW7Y0ztw": "q-003f3e8d.js",
+    "s_skxgNVWVOT8": "q-39709981.js",
+    "s_asLbBTFH6kA": "q-4febc7f6.js",
+    "s_g5vxWnYSDFs": "q-4febc7f6.js",
+    "s_uVE5iM9H73c": "q-39709981.js",
+    "s_AaAlzKH0KlQ": "q-de7edd62.js",
+    "s_tEQuFot8caw": "q-4febc7f6.js",
+    "s_WjXpUuAf3ck": "q-4febc7f6.js",
+    "s_0Ky05GxNoW8": "q-91b41c94.js",
+    "s_LJXogu0s4bw": "q-127e263e.js",
+    "s_WehTHV2Vp3k": "q-4febc7f6.js",
+    "s_gSIRXOSvTtA": "q-92144db4.js",
+    "s_mYsiJcA4IBc": "q-39709981.js",
+    "s_nd8yk3KO22c": "q-e13d124c.js",
+    "s_vsKr0ZqSHfU": "q-6200e394.js",
+    "s_z1nvHyEppoI": "q-de7edd62.js",
+    "s_zr0sXMkduGs": "q-003f3e8d.js",
+    "s_08Vu5jppeJk": "q-4febc7f6.js",
+    "s_6F5YqPRJUdg": "q-92144db4.js",
+    "s_YJ6mtqrUqEk": "q-003f3e8d.js"
   },
   "bundles": {
-    "q-026e7fd1.js": {
+    "q-003f3e8d.js": {
+      "size": 2406,
+      "imports": [
+        "q-20226430.js",
+        "q-4febc7f6.js",
+        "q-85848536.js"
+      ],
+      "origins": [
+        "src/entry_concertInfo.js",
+        "src/routes/concertInfo.css?used&inline",
+        "src/s_uddrw7y0ztw.js",
+        "src/s_yj6mtqruqek.js",
+        "src/s_zr0sxmkdugs.js"
+      ],
+      "symbols": [
+        "s_udDrW7Y0ztw",
+        "s_YJ6mtqrUqEk",
+        "s_zr0sXMkduGs"
+      ]
+    },
+    "q-127e263e.js": {
+      "size": 756,
+      "imports": [
+        "q-85848536.js"
+      ],
+      "dynamicImports": [
+        "q-92144db4.js"
+      ],
+      "origins": [
+        "src/components/header/header.js",
+        "src/entry_layout.js",
+        "src/s_ljxogu0s4bw.js"
+      ],
+      "symbols": [
+        "s_LJXogu0s4bw"
+      ]
+    },
+    "q-143c7194.js": {
+      "size": 2180,
+      "origins": [
+        "node_modules/@builder.io/qwik-city/service-worker.mjs",
+        "src/routes/service-worker.js"
+      ]
+    },
+    "q-20226430.js": {
+      "size": 1633,
+      "imports": [
+        "q-85848536.js"
+      ],
+      "dynamicImports": [
+        "q-4febc7f6.js"
+      ],
+      "origins": [
+        "src/routes/index.js"
+      ]
+    },
+    "q-39709981.js": {
       "size": 886,
       "imports": [
-        "q-43141245.js",
-        "q-643d2a0d.js"
+        "q-85848536.js",
+        "q-91b41c94.js"
       ],
       "origins": [
         "src/entry_Link.js",
@@ -277,32 +333,32 @@
         "s_uVE5iM9H73c"
       ]
     },
-    "q-06bf43e5.js": {
-      "size": 58,
+    "q-4f086b3d.js": {
+      "size": 158,
       "imports": [
-        "q-643d2a0d.js"
-      ]
-    },
-    "q-143c7194.js": {
-      "size": 2180,
-      "origins": [
-        "node_modules/@builder.io/qwik-city/service-worker.mjs",
-        "src/routes/service-worker.js"
-      ]
-    },
-    "q-317b7d8d.js": {
-      "size": 112927,
-      "imports": [
-        "q-4361ab43.js",
-        "q-643d2a0d.js"
+        "q-85848536.js"
       ],
       "dynamicImports": [
-        "q-5adcacc9.js"
+        "q-127e263e.js"
+      ],
+      "origins": [
+        "src/routes/layout.js"
+      ]
+    },
+    "q-4febc7f6.js": {
+      "size": 113805,
+      "imports": [
+        "q-20226430.js",
+        "q-85848536.js"
+      ],
+      "dynamicImports": [
+        "q-003f3e8d.js"
       ],
       "origins": [
         "\u0000/Users/alxndr/workspace/jrad-today/node_modules/papaparse/papaparse.min.js?commonjs-module",
         "\u0000commonjsHelpers.js",
         "node_modules/papaparse/papaparse.min.js",
+        "src/data/custom-dates.csv?raw",
         "src/data/recordings.csv?raw",
         "src/data/shows.csv?raw",
         "src/entry_routes.js",
@@ -328,17 +384,43 @@
         "s_WjXpUuAf3ck"
       ]
     },
-    "q-43141245.js": {
+    "q-6200e394.js": {
+      "size": 515,
+      "imports": [
+        "q-85848536.js",
+        "q-91b41c94.js"
+      ],
+      "origins": [
+        "src/entry_RouterHead.js",
+        "src/s_vskr0zqshfu.js"
+      ],
+      "symbols": [
+        "s_vsKr0ZqSHfU"
+      ]
+    },
+    "q-85848536.js": {
+      "size": 36370,
+      "dynamicImports": [
+        "q-91b41c94.js"
+      ],
+      "origins": [
+        "\u0000vite/preload-helper",
+        "node_modules/@builder.io/qwik/core.min.mjs",
+        "src/global.css",
+        "src/root.js"
+      ]
+    },
+    "q-91b41c94.js": {
       "size": 4421,
       "imports": [
-        "q-643d2a0d.js"
+        "q-85848536.js"
       ],
       "dynamicImports": [
-        "q-026e7fd1.js",
-        "q-66458a72.js",
-        "q-86af8364.js",
-        "q-8a335b6a.js",
-        "q-e983fc4a.js"
+        "q-39709981.js",
+        "q-6200e394.js",
+        "q-de7edd62.js",
+        "q-e13d124c.js",
+        "q-f3781a59.js"
       ],
       "origins": [
         "node_modules/@builder.io/qwik-city/index.qwik.mjs",
@@ -350,68 +432,10 @@
         "s_0Ky05GxNoW8"
       ]
     },
-    "q-4361ab43.js": {
-      "size": 1633,
-      "imports": [
-        "q-643d2a0d.js"
-      ],
-      "dynamicImports": [
-        "q-317b7d8d.js"
-      ],
-      "origins": [
-        "src/routes/index.js"
-      ]
-    },
-    "q-5adcacc9.js": {
-      "size": 2406,
-      "imports": [
-        "q-317b7d8d.js",
-        "q-4361ab43.js",
-        "q-643d2a0d.js"
-      ],
-      "origins": [
-        "src/entry_concertInfo.js",
-        "src/routes/concertInfo.css?used&inline",
-        "src/s_uddrw7y0ztw.js",
-        "src/s_yj6mtqruqek.js",
-        "src/s_zr0sxmkdugs.js"
-      ],
-      "symbols": [
-        "s_udDrW7Y0ztw",
-        "s_YJ6mtqrUqEk",
-        "s_zr0sXMkduGs"
-      ]
-    },
-    "q-643d2a0d.js": {
-      "size": 36370,
-      "dynamicImports": [
-        "q-43141245.js"
-      ],
-      "origins": [
-        "\u0000vite/preload-helper",
-        "node_modules/@builder.io/qwik/core.min.mjs",
-        "src/global.css",
-        "src/root.js"
-      ]
-    },
-    "q-66458a72.js": {
-      "size": 346,
-      "imports": [
-        "q-643d2a0d.js"
-      ],
-      "dynamicImports": [
-        "q-4361ab43.js",
-        "q-84f1e976.js",
-        "q-cc58ca5b.js"
-      ],
-      "origins": [
-        "@qwik-city-plan"
-      ]
-    },
-    "q-68af1561.js": {
+    "q-92144db4.js": {
       "size": 607,
       "imports": [
-        "q-643d2a0d.js"
+        "q-85848536.js"
       ],
       "origins": [
         "src/components/header/header.css?used&inline",
@@ -424,40 +448,32 @@
         "s_gSIRXOSvTtA"
       ]
     },
-    "q-84f1e976.js": {
-      "size": 158,
+    "q-ba37d3d1.js": {
+      "size": 128,
       "imports": [
-        "q-643d2a0d.js"
+        "q-85848536.js"
       ],
       "dynamicImports": [
-        "q-bc4e4663.js"
+        "q-143c7194.js"
       ],
       "origins": [
-        "src/routes/layout.js"
+        "@qwik-city-entries"
       ]
     },
-    "q-86af8364.js": {
-      "size": 269,
+    "q-c9570358.js": {
+      "size": 58,
       "imports": [
-        "q-43141245.js",
-        "q-643d2a0d.js"
-      ],
-      "origins": [
-        "src/entry_RouterOutlet.js",
-        "src/s_nd8yk3ko22c.js"
-      ],
-      "symbols": [
-        "s_nd8yk3KO22c"
+        "q-85848536.js"
       ]
     },
-    "q-8a335b6a.js": {
+    "q-de7edd62.js": {
       "size": 1489,
       "imports": [
-        "q-43141245.js",
-        "q-643d2a0d.js"
+        "q-85848536.js",
+        "q-91b41c94.js"
       ],
       "dynamicImports": [
-        "q-66458a72.js"
+        "q-f3781a59.js"
       ],
       "origins": [
         "@builder.io/qwik/build",
@@ -470,47 +486,32 @@
         "s_z1nvHyEppoI"
       ]
     },
-    "q-bc4e4663.js": {
-      "size": 756,
+    "q-e13d124c.js": {
+      "size": 269,
       "imports": [
-        "q-643d2a0d.js"
-      ],
-      "dynamicImports": [
-        "q-68af1561.js"
+        "q-85848536.js",
+        "q-91b41c94.js"
       ],
       "origins": [
-        "src/components/header/header.js",
-        "src/entry_layout.js",
-        "src/s_ljxogu0s4bw.js"
+        "src/entry_RouterOutlet.js",
+        "src/s_nd8yk3ko22c.js"
       ],
       "symbols": [
-        "s_LJXogu0s4bw"
+        "s_nd8yk3KO22c"
       ]
     },
-    "q-cc58ca5b.js": {
-      "size": 128,
+    "q-f3781a59.js": {
+      "size": 346,
       "imports": [
-        "q-643d2a0d.js"
+        "q-85848536.js"
       ],
       "dynamicImports": [
-        "q-143c7194.js"
+        "q-20226430.js",
+        "q-4f086b3d.js",
+        "q-ba37d3d1.js"
       ],
       "origins": [
-        "@qwik-city-entries"
-      ]
-    },
-    "q-e983fc4a.js": {
-      "size": 515,
-      "imports": [
-        "q-43141245.js",
-        "q-643d2a0d.js"
-      ],
-      "origins": [
-        "src/entry_RouterHead.js",
-        "src/s_vskr0zqshfu.js"
-      ],
-      "symbols": [
-        "s_vsKr0ZqSHfU"
+        "@qwik-city-plan"
       ]
     }
   },
