--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build.static": "vite build --ssr src/entry.static.tsx",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
-    "deploy.prod": "npm run build.client && npm run build.static && npm run ssg && gh-pages --dist dist --dotfiles --branch gh-pages",
+    "deploy.prod": "export TIMESTAMP=$(npm run -s timestamp) && echo starting at $TIMESTAMP && npm run build.client && npm run build.static && npm run ssg && gh-pages --branch gh-pages --tag deploy-${TIMESTAMP} --dist dist --dotfiles && echo done at $(npm run -s timestamp)",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -22,7 +22,8 @@
     "qwik": "qwik",
     "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
-    "test": "node --loader=ts-node/esm bin/test.ts"
+    "test": "node --loader=ts-node/esm bin/test.ts",
+    "timestamp": "date '+%FT%T-%Z'"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.9.0",
