--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,10 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           command: npm run test.fxn
-          start: npm run start.ci -- --port 4242
-          wait-on: http://$(hostname):4242
-          wait-on-timeout: 10
+          start: npm run start.ci -- --port 4200
+          wait-on: http://localhost:4200
+          wait-on-timeout: 20
         env:
-          CYPRESS_BASE_URL: http://$(hostname):4242/
+          CYPRESS_BASE_URL: http://localhost:4200
           DEBUG: '@cypress/github-action'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
