--- a/package.json
+++ b/package.json
@@ -9,25 +9,24 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.static": "vite build --ssr src/entry.static.tsx",
+    "build.server": "vite build -c adaptors/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "data": "download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/shows.csv > src/data/shows.csv && download https://raw.githubusercontent.com/alxndr/almost-dead-net/main/src/data/csv/recordings.csv > src/data/recordings.csv",
-    "deploy.prod": "export TIMESTAMP=$(npm run -s timestamp) && echo starting at $TIMESTAMP && npm run build.client && npm run build.static && npm run ssg && gh-pages --branch gh-pages --tag deploy-${TIMESTAMP} --dist dist --dotfiles && echo done at $(npm run -s timestamp)",
+    "deploy.prod": "export TIMESTAMP=$(npm run -s timestamp) && echo starting at $TIMESTAMP && npm run build.client && npm run build.server && gh-pages --branch gh-pages --tag deploy-${TIMESTAMP} --dist dist --dotfiles && echo done at $(npm run -s timestamp)",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "qwik": "qwik",
-    "ssg": "node server/entry.static",
     "start": "vite --open --mode ssr",
     "test": "node --loader=ts-node/esm bin/test.ts",
-    "timestamp": "date '+%FT%T-%Z'"
+    "timestamp": "date '+%FT%T-%Z'",
+    "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.11.0",
-    "@builder.io/qwik-city": "0.0.111",
+    "@builder.io/qwik": "0.13.3",
+    "@builder.io/qwik-city": "0.0.125",
     "@japa/expect": "^2.0.1",
     "@japa/run-failed-tests": "^1.1.0",
     "@japa/runner": "^2.2.1",
