--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.13.3",
+    "@builder.io/qwik": "0.14.0",
     "@builder.io/qwik-city": "0.0.125",
-    "@japa/expect": "^2.0.1",
-    "@japa/run-failed-tests": "^1.1.0",
-    "@japa/runner": "^2.2.1",
-    "@japa/spec-reporter": "^1.3.1",
+    "@japa/expect": "2.0.1",
+    "@japa/run-failed-tests": "1.1.0",
+    "@japa/runner": "2.2.1",
+    "@japa/spec-reporter": "1.3.1",
     "@types/eslint": "8.4.6",
     "@types/node": "latest",
-    "@types/papaparse": "^5.3.5",
+    "@types/papaparse": "5.3.5",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
-    "download-cli": "^1.1.1",
+    "download-cli": "1.1.1",
     "eslint": "8.23.1",
     "eslint-plugin-qwik": "0.9.0",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "4.0.0",
     "node-fetch": "3.2.10",
-    "papaparse": "^5.3.2",
+    "papaparse": "5.3.2",
     "prettier": "2.7.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "10.9.1",
     "typescript": "4.8.3",
     "vite": "3.1.3",
     "vite-tsconfig-paths": "3.5.0"
